src/test/deca/codegen/valid/add_identifierInt.deca
// Description:
//    addition
//
// Resultats:
//     2
// 
// Historique:
//    cree le 01/01/2023

{
    int a = 1;
    print(a+1);
}

