src/test/deca/codegen/invalid/overflow.deca
// Description:
//    tests operations plus
//
// Resultats:
//    Erreur : Debordement de pile non codable ou division par 0.0
// 
// Historique:
//    cree le 01/01/2023

{
    int a = 2147483647;
    a=a+1;
}

